--- a/src/common/components/Button/Button.module.scss
+++ b/src/common/components/Button/Button.module.scss
@@ -3,10 +3,10 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
-  background: #39b9b4;
+  background: #e2f163;
   position: relative;
   width: 100%;
-  color: white;
+  color: black;
   height: 48px;
   border-radius: 10px;
   font-size: 14px;
@@ -18,13 +18,9 @@
   &_secondary {
     background: none;
     padding: 6px 10px;
-    border: 1px solid #39b9b4;
+    border: 1px solid #e2f163;
     border-radius: 10px;
-    color: black;
-    &:hover {
-      background: rgb(224, 224, 224);
-      color: rgb(42, 42, 42);
-    }
+    color: #e2f163;
   }
   &_loader {
     animation: spin 1s linear infinite;
