--- a/src/common/components/Checkbox/Checkbox.module.scss
+++ b/src/common/components/Checkbox/Checkbox.module.scss
@@ -2,31 +2,33 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  color: black;
+  color: #000;
 
   &_label {
     font-size: 20px;
     flex: 1;
+    margin-left: 8px;
   }
+
   &_checkMark {
     position: relative;
     display: inline-block;
-    width: 24px;
-    min-height: 24px;
-    background: green;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin-right: 5px;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border: 2px solid #39b9b4;
+    border-radius: 4px;
+    transition: all 0.2s ease;
 
     &::after {
       content: '';
       position: absolute;
       display: none;
-      left: 7px;
-      top: 2px;
-      width: 8px;
-      height: 16px;
-      border: solid yellow;
+      left: 5px;
+      top: 1px;
+      width: 6px;
+      height: 12px;
+      border: solid #fff;
       border-width: 0 2px 2px 0;
       transform: rotate(45deg);
     }
@@ -36,6 +38,12 @@
 input[type='checkbox'] {
   position: absolute;
   opacity: 0;
+  cursor: pointer;
+}
+
+input[type='checkbox']:checked + .checkbox_checkMark {
+  background: #39b9b4;
+  border-color: #39b9b4;
 }
 
 input[type='checkbox']:checked + .checkbox_checkMark::after {
