--- a/src/common/components/Onboarding/Onboarding.module.scss
+++ b/src/common/components/Onboarding/Onboarding.module.scss
@@ -5,8 +5,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: white;
   &_skip {
-    align-self: flex-end;
+    display: flex;
+    justify-content: end;
     background: none;
     border: none;
     font-size: 16px;
@@ -16,6 +18,12 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+  }
+  &_subscription {
+    margin: 45px 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
   }
 }
 
@@ -51,5 +59,5 @@
   border-radius: 50%;
   width: 6px;
   height: 6px;
-  background-color: #39b9b4 !important;
+  background-color: #e2f163 !important;
 }
