--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,9 +1,10 @@
 .main_container {
   margin: 0 auto;
   max-width: 628px;
-  height: 100vh;
+  min-height: 100vh;
   border-left: 1px solid black;
   border-right: 1px solid black;
+  background-color: #1e1e1e;
 }
 
 @font-face {
