--- a/src/common/components/PaymentSwiper/PaymentSwiper.module.scss
+++ b/src/common/components/PaymentSwiper/PaymentSwiper.module.scss
@@ -44,3 +44,10 @@
   font-size: 24px;
   text-align: right;
 }
+
+.discount_price {
+  height: 14px;
+  color: #999;
+  font-size: 14px;
+  text-decoration: line-through;
+}
