--- a/src/common/components/Layout/Layout.module.scss
+++ b/src/common/components/Layout/Layout.module.scss
@@ -14,7 +14,7 @@
   bottom: 0;
   width: 100%;
   height: 64px;
-  background: #896cfe;
+  background: #672dca;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -43,7 +43,7 @@
 }
 
 .active {
-  transform: scale(1.02);
+  transform: scale(1.1);
   span {
     font-weight: 700;
   }
