--- a/src/common/components/Loader/Loader.module.scss
+++ b/src/common/components/Loader/Loader.module.scss
@@ -1,26 +1,32 @@
-.container {
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+.wrapper {
   width: 100%;
+  height: 100vh;
+  background: radial-gradient(circle at top, #2a2a2a, #0f0f0f);
+
+  display: flex;
   flex-direction: column;
-  gap: 25px;
-  &_text {
-    color: #8f9aa2;
-  }
-  &_loader {
-    animation: spin 1s linear infinite;
-    font-size: larger;
-  }
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  border: 6px solid rgba(255, 255, 255, 0.15);
+  border-top-color: #d6ff3f;
+  animation: spin 1s linear infinite;
+}
+
+.text {
+  margin-top: 24px;
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
+  to {
     transform: rotate(360deg);
   }
 }
