--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background-color: #896cfe;
+  background-color: #672dca;
   padding: 20px;
   align-items: center;
   border-radius: 15px;
