--- a/src/pages/ProfileEditPage/ProfileEditPage.module.scss
+++ b/src/pages/ProfileEditPage/ProfileEditPage.module.scss
@@ -110,6 +110,10 @@
   padding: 15px;
   background-color: #313131;
   margin-bottom: 1.5rem;
+  option {
+    background-color: #313131;
+    color: white;
+  }
 }
 
 .label {
@@ -172,4 +176,21 @@
   height: 100%;
   opacity: 0;
   cursor: pointer;
+}
+
+.error {
+  display: block;
+  margin-top: 4px;
+  font-size: 12px;
+  color: #ff4d4f;
+}
+
+.input[type='number'] {
+  appearance: textfield;
+}
+
+.input[type='number']::-webkit-inner-spin-button,
+.input[type='number']::-webkit-outer-spin-button {
+  appearance: none;
+  margin: 0;
 }
