--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -5,6 +5,7 @@
   border-left: 1px solid black;
   border-right: 1px solid black;
   background-color: #1e1e1e;
+  position: relative;
 }
 
 @font-face {
