--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -52,6 +52,11 @@
   background-color: none;
 }
 
+.achievementImage {
+  width: 25px;
+  height: 25px;
+}
+
 .subtitle {
   color: #999;
   font-size: 14px;
