--- a/src/common/components/PaymentSwiper/PaymentSwiper.module.scss
+++ b/src/common/components/PaymentSwiper/PaymentSwiper.module.scss
@@ -49,5 +49,18 @@
   height: 14px;
   color: #999;
   font-size: 14px;
+  text-align: end;
+  margin-bottom: 4px;
   text-decoration: line-through;
+}
+
+.old_price {
+  text-decoration: line-through;
+  opacity: 0.6;
+}
+
+.discount {
+  text-align: end;
+  color: #2ecc71;
+  font-size: 14px;
 }
