--- a/src/pages/WorkoutPage/WorkoutPage.module.scss
+++ b/src/pages/WorkoutPage/WorkoutPage.module.scss
@@ -69,7 +69,7 @@
   border-radius: 12px;
   border: 1px solid #444;
   background: #1a1a1a;
-  color: #666;
+  color: white;
   font-size: 14px;
   outline: none;
 }
@@ -220,5 +220,33 @@
 
   .videoContainer {
     height: 160px;
+  }
+}
+
+.notificationButton {
+  position: absolute;
+  top: 20vh;
+  right: -1px;
+  width: 18px;
+  height: 50px;
+  background: #c4ff4d;
+  border: none;
+  border-radius: 8px 0 0 8px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+  transition: all 0.2s;
+  animation: fadeIn 0.3s ease-out;
+  padding: 0;
+  overflow: visible;
+
+  svg {
+    padding-left: 6px;
+    width: 32px;
+    height: 32px;
+    color: #333;
   }
 }
