--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -263,3 +263,14 @@
     color: white;
   }
 }
+
+.adminLink {
+  background: none;
+  color: white;
+  font-size: 14px;
+  padding: 15px;
+  border-radius: 10px;
+  width: 100%;
+  text-align: center;
+  border: 1px solid rgb(192, 192, 0);
+}
