--- a/src/common/components/Layout/Layout.module.scss
+++ b/src/common/components/Layout/Layout.module.scss
@@ -12,12 +12,14 @@
 .nav {
   position: sticky;
   bottom: 0;
+  overflow-x: hidden;
   width: 100%;
-  height: 64px;
+  height: 84px;
   background: #672dca;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: start;
+  padding-top: 10px;
   flex-shrink: 0;
 }
 
