--- a/src/common/components/Loader/Loader.module.scss
+++ b/src/common/components/Loader/Loader.module.scss
@@ -1,8 +1,10 @@
 .wrapper {
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 100vh;
   background: radial-gradient(circle at top, #2a2a2a, #0f0f0f);
-
+  z-index: 100;
   display: flex;
   flex-direction: column;
   align-items: center;
