--- a/src/pages/ChatPage/ChatPage.module.scss
+++ b/src/pages/ChatPage/ChatPage.module.scss
@@ -1,7 +1,7 @@
 .chat_container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 64px);
+  height: calc(100vh - 84px);
   background-color: #000;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
@@ -244,7 +244,7 @@
 
 .admin_chat_wrapper {
   display: flex;
-  height: calc(100vh - 64px);
+  height: calc(100vh - 84px);
   background: #f5f5f5;
 }
 
@@ -465,5 +465,31 @@
 
   .chat_main {
     height: 60vh;
+  }
+}
+
+.load_more_button {
+  width: 100%;
+  padding: 10px 0;
+  margin: 8px 0;
+  background-color: #1e1e1e;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition:
+    background 0.2s,
+    transform 0.1s;
+
+  &:hover {
+    background-color: #2a2a2a;
+    transform: translateY(-1px);
+  }
+
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
   }
 }
