--- a/src/pages/ErrorScreen/ErrorScreen.module.scss
+++ b/src/pages/ErrorScreen/ErrorScreen.module.scss
@@ -39,6 +39,27 @@
   margin-bottom: 20px;
 }
 
+.backButton {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #e2f163;
+  border: none;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  display: flex;
+  padding-left: 13px;
+  align-items: center;
+  justify-content: center;
+  color: #1a1a1a;
+
+  svg {
+    width: 20px;
+    height: 20px;
+  }
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
