--- a/src/common/components/Achievement/AchievementModal.module.scss
+++ b/src/common/components/Achievement/AchievementModal.module.scss
@@ -30,8 +30,9 @@
   color: white;
 
   img {
-    background-color: #1e1e1e;
-    width: 64px;
+    background-color: none;
+    width: 88px;
+    height: 88px;
     margin-bottom: 16px;
   }
 
