--- a/src/common/components/Achievement/Achievement.module.scss
+++ b/src/common/components/Achievement/Achievement.module.scss
@@ -1,12 +1,12 @@
 .achievement {
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 10px;
   cursor: pointer;
   transition:
     transform 0.2s ease,
@@ -14,8 +14,9 @@
   text-align: center;
 
   img {
-    width: 48px;
-    height: 48px;
+    background-color: none;
+    width: 68px;
+    height: 68px;
   }
 
   span {
