--- a/src/pages/HomeworkPage/HomeworkPage.module.scss
+++ b/src/pages/HomeworkPage/HomeworkPage.module.scss
@@ -42,7 +42,7 @@
 
 .exerciseContainer {
   background: white;
-  padding: 12px 16px;
+  padding: 10px 16px 8px;
   border-radius: 0 0 12px 12px;
   font-size: 14px;
   margin-bottom: 20px;
