--- a/src/common/components/Onboarding/Onboarding.module.scss
+++ b/src/common/components/Onboarding/Onboarding.module.scss
@@ -61,3 +61,10 @@
   height: 6px;
   background-color: #e2f163 !important;
 }
+
+.agreementText {
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 10px;
+  background-color: #ffffff05;
+}
