--- a/src/pages/HomeworkPage/HomeworkPage.module.scss
+++ b/src/pages/HomeworkPage/HomeworkPage.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 0px;
+  padding-bottom: 40px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
 }
 
@@ -41,19 +42,38 @@
 }
 
 .exerciseContainer {
-  background: white;
+  background: #ffffff0a;
   padding: 10px 16px 8px;
   border-radius: 0 0 12px 12px;
   font-size: 14px;
   margin-bottom: 20px;
   font-weight: 500;
+  scrollbar-width: thin;
+  scrollbar-color: #2a2a2a transparent;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #2a2a2a;
+    border-radius: 6px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #3a3a3a;
+  }
 }
 
 .exerciseName {
   display: flex;
   justify-content: space-between;
   p {
-    color: #000;
+    color: #ffffff;
   }
 }
 
