--- a/src/common/components/Achievement/AchievementModal.module.scss
+++ b/src/common/components/Achievement/AchievementModal.module.scss
@@ -25,7 +25,7 @@
   border-radius: 20px;
   padding: 24px;
   width: 320px;
-  height: 40vh;
+  height: fit-content;
   text-align: center;
   color: white;
 
