add fullscreen, update workouts

--- a/src/pages/HomeworkPage/HomeworkPage.module.scss
+++ b/src/pages/HomeworkPage/HomeworkPage.module.scss
@@ -128,7 +128,7 @@
 
 .progressRingCircle {
   fill: none;
-  stroke: #c4ff61;
+  stroke: #e2f163;
   stroke-width: 12;
   stroke-linecap: round;
   transition: stroke-dashoffset 0.3s ease;
