--- a/src/pages/WorkoutPage/WorkoutPage.module.scss
+++ b/src/pages/WorkoutPage/WorkoutPage.module.scss
@@ -128,7 +128,15 @@
 
 .progressRingCircle {
   fill: none;
-  stroke: #c4ff61;
+  stroke: #e2f163;
+  stroke-width: 12;
+  stroke-linecap: round;
+  transition: stroke-dashoffset 0.3s ease;
+}
+
+.progressRingCircleEx {
+  fill: none;
+  stroke: #e2f163;
   stroke-width: 12;
   stroke-linecap: round;
   transition: stroke-dashoffset 0.3s ease;
