--- a/src/common/components/PaymentSwiper/PaymentSwiper.module.scss
+++ b/src/common/components/PaymentSwiper/PaymentSwiper.module.scss
@@ -33,7 +33,7 @@
   top: -12px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #e2f163;
+  background-color: rgb(141, 1, 141);
   color: white;
   padding: 6px 16px;
   border-radius: 4px;
