--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+
   margin-top: 10px;
   padding: 5%;
+  padding-top: 40px;
   color: white;
   &_trainee {
     display: flex;
