--- a/src/pages/HomeworkPage/HomeworkPage.module.scss
+++ b/src/pages/HomeworkPage/HomeworkPage.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   padding: 0px;
+  padding-top: 40px;
   padding-bottom: 40px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
 }
